# libtcc-portability-test

./: .gitignore  CMakeLists.txt  README.md  build-tcc.bat  build-tcc.sh  build-test.bat  build-test.sh  run-test.bat  run-test.sh  test.cpp
